[project]
name = "sunlog"
version = "0.1.0"
description = "A CLI tool to log daily sun exposure and estimate vitamin D synthesis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.scripts]
sunlog = "sunlog.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunlog"]